bug fixes & update functions
